--- a/sensor/requirements.txt
+++ b/sensor/requirements.txt
@@ -5,6 +5,7 @@ fastapi==0.104.1
 h11==0.14.0
 httptools==0.6.1
 idna==3.4
+paho-mqtt==1.6.1
 pydantic==2.5.2
 pydantic_core==2.14.5
 python-dotenv==1.0.0
