--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
+    "mqtt": "^5.3.0",
     "nodemon": "^3.0.1",
     "websocket-stream": "^5.5.2"
   }
