--- a/broker/package.json
+++ b/broker/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "aedes": "^0.50.0",
-    "nodemon": "^3.0.1",
     "websocket-stream": "^5.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
