--- a/compose.yml
+++ b/compose.yml
@@ -24,13 +24,14 @@ services:
   backend:
     build: ./backend
     environment:
+      - HOST=0.0.0.0
       - BROKER_HOST=broker
       - BROKER_PORT=8884
       - BROKER_USER=broker_user
       - BROKER_PWD=broker_pwd
       - BROKER_CLIENT_ID=node_backend
       - SENSOR_API_HOST=sensor
-      - SENSOR_API_PORT=8000
+      - SENSOR_API_PORT=80
       - DATABASE_HOST=database
       - DATABASE_PORT=27017
       - DATABASE_USER=sensor
